# project7

./: 01-autoencoder.ipynb  02-transcriptor.ipynb  pyproject.toml
.github/workflows/: nn_test.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test_package.py
