[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nn"
authors = [{name = "Silvia Miramontes", email = "silvia.miramontes@ucsf.edu"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://www.github.com/s-miramontes/project7"
